solidity-frontend/src/main/java/org/sonarsource/solidity/SolidityParser.java
package org.sonarsource.solidity;

import java.util.List;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
// Generated from Solidity.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SolidityParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
    T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
    T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
    T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
    T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
    T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
    T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
    T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59,
    T__59 = 60, T__60 = 61, T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66,
    T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, T__72 = 73,
    T__73 = 74, T__74 = 75, T__75 = 76, T__76 = 77, T__77 = 78, T__78 = 79, T__79 = 80,
    T__80 = 81, T__81 = 82, T__82 = 83, T__83 = 84, T__84 = 85, T__85 = 86, T__86 = 87,
    T__87 = 88, T__88 = 89, Int = 90, Uint = 91, Byte = 92, Fixed = 93, Ufixed = 94, VersionLiteral = 95,
    BooleanLiteral = 96, DecimalNumber = 97, HexNumber = 98, NumberUnit = 99, HexLiteral = 100,
    ReservedKeyword = 101, AnonymousKeyword = 102, BreakKeyword = 103, ConstantKeyword = 104,
    ContinueKeyword = 105, ExternalKeyword = 106, IndexedKeyword = 107, InternalKeyword = 108,
    PayableKeyword = 109, PrivateKeyword = 110, PublicKeyword = 111, PureKeyword = 112,
    ViewKeyword = 113, Identifier = 114, StringLiteral = 115, WS = 116, COMMENT = 117,
    LINE_COMMENT = 118;
  public static final int RULE_sourceUnit = 0, RULE_pragmaDirective = 1, RULE_pragmaName = 2, RULE_pragmaValue = 3,
    RULE_version = 4, RULE_versionOperator = 5, RULE_versionConstraint = 6,
    RULE_importDeclaration = 7, RULE_importDirective = 8, RULE_contractDefinition = 9,
    RULE_inheritanceSpecifier = 10, RULE_contractPart = 11, RULE_stateVariableDeclaration = 12,
    RULE_usingForDeclaration = 13, RULE_structDefinition = 14, RULE_constructorDefinition = 15,
    RULE_modifierDefinition = 16, RULE_modifierInvocation = 17, RULE_functionDefinition = 18,
    RULE_returnParameters = 19, RULE_modifierList = 20, RULE_eventDefinition = 21,
    RULE_enumValue = 22, RULE_enumDefinition = 23, RULE_parameterList = 24,
    RULE_parameter = 25, RULE_eventParameterList = 26, RULE_eventParameter = 27,
    RULE_functionTypeParameterList = 28, RULE_functionTypeParameter = 29,
    RULE_variableDeclaration = 30, RULE_typeName = 31, RULE_userDefinedTypeName = 32,
    RULE_mapping = 33, RULE_functionTypeName = 34, RULE_storageLocation = 35,
    RULE_stateMutability = 36, RULE_block = 37, RULE_statement = 38, RULE_expressionStatement = 39,
    RULE_ifStatement = 40, RULE_whileStatement = 41, RULE_simpleStatement = 42,
    RULE_forStatement = 43, RULE_inlineAssemblyStatement = 44, RULE_doWhileStatement = 45,
    RULE_continueStatement = 46, RULE_breakStatement = 47, RULE_returnStatement = 48,
    RULE_throwStatement = 49, RULE_emitStatement = 50, RULE_variableDeclarationStatement = 51,
    RULE_identifierList = 52, RULE_elementaryTypeName = 53, RULE_expression = 54,
    RULE_primaryExpression = 55, RULE_expressionList = 56, RULE_nameValueList = 57,
    RULE_nameValue = 58, RULE_functionCallArguments = 59, RULE_functionCall = 60,
    RULE_assemblyBlock = 61, RULE_assemblyItem = 62, RULE_assemblyExpression = 63,
    RULE_assemblyCall = 64, RULE_assemblyLocalDefinition = 65, RULE_assemblyAssignment = 66,
    RULE_assemblyIdentifierOrList = 67, RULE_assemblyIdentifierList = 68,
    RULE_assemblyStackAssignment = 69, RULE_labelDefinition = 70, RULE_assemblySwitch = 71,
    RULE_assemblyCase = 72, RULE_assemblyFunctionDefinition = 73, RULE_assemblyFunctionReturns = 74,
    RULE_assemblyFor = 75, RULE_assemblyIf = 76, RULE_assemblyLiteral = 77,
    RULE_subAssembly = 78, RULE_tupleExpression = 79, RULE_elementaryTypeNameExpression = 80,
    RULE_numberLiteral = 81, RULE_identifier = 82;
  public static final String[] ruleNames = {
    "sourceUnit", "pragmaDirective", "pragmaName", "pragmaValue", "version",
    "versionOperator", "versionConstraint", "importDeclaration", "importDirective",
    "contractDefinition", "inheritanceSpecifier", "contractPart", "stateVariableDeclaration",
    "usingForDeclaration", "structDefinition", "constructorDefinition", "modifierDefinition",
    "modifierInvocation", "functionDefinition", "returnParameters", "modifierList",
    "eventDefinition", "enumValue", "enumDefinition", "parameterList", "parameter",
    "eventParameterList", "eventParameter", "functionTypeParameterList", "functionTypeParameter",
    "variableDeclaration", "typeName", "userDefinedTypeName", "mapping", "functionTypeName",
    "storageLocation", "stateMutability", "block", "statement", "expressionStatement",
    "ifStatement", "whileStatement", "simpleStatement", "forStatement", "inlineAssemblyStatement",
    "doWhileStatement", "continueStatement", "breakStatement", "returnStatement",
    "throwStatement", "emitStatement", "variableDeclarationStatement", "identifierList",
    "elementaryTypeName", "expression", "primaryExpression", "expressionList",
    "nameValueList", "nameValue", "functionCallArguments", "functionCall",
    "assemblyBlock", "assemblyItem", "assemblyExpression", "assemblyCall",
    "assemblyLocalDefinition", "assemblyAssignment", "assemblyIdentifierOrList",
    "assemblyIdentifierList", "assemblyStackAssignment", "labelDefinition",
    "assemblySwitch", "assemblyCase", "assemblyFunctionDefinition", "assemblyFunctionReturns",
    "assemblyFor", "assemblyIf", "assemblyLiteral", "subAssembly", "tupleExpression",
    "elementaryTypeNameExpression", "numberLiteral", "identifier"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'pragma'", "';'", "'^'", "'~'", "'>='", "'>'", "'<'", "'<='", "'='",
    "'as'", "'import'", "'*'", "'from'", "'{'", "','", "'}'", "'contract'",
    "'interface'", "'library'", "'is'", "'('", "')'", "'using'", "'for'",
    "'struct'", "'constructor'", "'modifier'", "'function'", "'returns'",
    "'event'", "'enum'", "'['", "']'", "'.'", "'mapping'", "'=>'", "'memory'",
    "'storage'", "'if'", "'else'", "'while'", "'assembly'", "'do'", "'return'",
    "'throw'", "'emit'", "'var'", "'address'", "'bool'", "'string'", "'byte'",
    "'++'", "'--'", "'new'", "'+'", "'-'", "'after'", "'delete'", "'!'", "'**'",
    "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'=='", "'!='", "'&&'", "'||'",
    "'?'", "':'", "'|='", "'^='", "'&='", "'<<='", "'>>='", "'+='", "'-='",
    "'*='", "'/='", "'%='", "'let'", "':='", "'=:'", "'switch'", "'case'",
    "'default'", "'->'", null, null, null, null, null, null, null, null, null,
    null, null, null, "'anonymous'", "'break'", "'constant'", "'continue'",
    "'external'", "'indexed'", "'internal'", "'payable'", "'private'", "'public'",
    "'pure'", "'view'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, "Int", "Uint", "Byte", "Fixed", "Ufixed",
    "VersionLiteral", "BooleanLiteral", "DecimalNumber", "HexNumber", "NumberUnit",
    "HexLiteral", "ReservedKeyword", "AnonymousKeyword", "BreakKeyword", "ConstantKeyword",
    "ContinueKeyword", "ExternalKeyword", "IndexedKeyword", "InternalKeyword",
    "PayableKeyword", "PrivateKeyword", "PublicKeyword", "PureKeyword", "ViewKeyword",
    "Identifier", "StringLiteral", "WS", "COMMENT", "LINE_COMMENT"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "Solidity.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public SolidityParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class SourceUnitContext extends ParserRuleContext {
    public TerminalNode EOF() {
      return getToken(SolidityParser.EOF, 0);
    }

    public List<PragmaDirectiveContext> pragmaDirective() {
      return getRuleContexts(PragmaDirectiveContext.class);
    }

    public PragmaDirectiveContext pragmaDirective(int i) {
      return getRuleContext(PragmaDirectiveContext.class, i);
    }

    public List<ImportDirectiveContext> importDirective() {
      return getRuleContexts(ImportDirectiveContext.class);
    }

    public ImportDirectiveContext importDirective(int i) {
      return getRuleContext(ImportDirectiveContext.class, i);
    }

    public List<ContractDefinitionContext> contractDefinition() {
      return getRuleContexts(ContractDefinitionContext.class);
    }

    public ContractDefinitionContext contractDefinition(int i) {
      return getRuleContext(ContractDefinitionContext.class, i);
    }

    public SourceUnitContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sourceUnit;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SolidityVisitor)
        return ((SolidityVisitor<? extends T>) visitor).visitSourceUnit(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SourceUnitContext sourceUnit() throws RecognitionException {
    SourceUnitContext _localctx = new SourceUnitContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_sourceUnit);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(171);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__10) | (1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) {
          {
            setState(169);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
              case T__0: {
                setState(166);
                pragmaDirective();
              }
                break;
              case T__10: {
                setState(167);
                importDirective();
              }
                break;
              case T__16:
              case T__17:
              case T__18: {
                setState(168);
                contractDefinition();
              }
                break;
              default:
                throw new NoViableAltException(this);
            }
          }
          setState(173);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(174);
        match(EOF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PragmaDirectiveContext extends ParserRuleContext {
    public PragmaNameContext pragmaName() {
      return getRuleContext(PragmaNameContext.class, 0);
    }

    public PragmaValueContext pragmaValue() {
      return getRuleContext(PragmaValueContext.class, 0);
    }

    public PragmaDirectiveContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_pragmaDirective;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SolidityVisitor)
        return ((SolidityVisitor<? extends T>) visitor).visitPragmaDirective(this);
      else return visitor.visitChildren(this);
    }
  }

  public final PragmaDirectiveContext pragmaDirective() throws RecognitionException {
    PragmaDirectiveContext _localctx = new PragmaDirectiveContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_pragmaDirective);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(176);
        match(T__0);
        setState(177);
        pragmaName();
        setState(178);
        pragmaValue();
        setState(179);
        match(T__1);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PragmaNameContext extends ParserRuleContext {
    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public PragmaNameContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_pragmaName;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SolidityVisitor)
        return ((SolidityVisitor<? extends T>) visitor).visitPragmaName(this);
      else return visitor.visitChildren(this);
    }
  }

  public final PragmaNameContext pragmaName() throws RecognitionException {
    PragmaNameContext _localctx = new PragmaNameContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_pragmaName);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(181);
        identifier();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PragmaValueContext extends ParserRuleContext {
    public VersionContext version() {
      return getRuleContext(VersionContext.class, 0);
    }

    public ExpressionContext expression() {
      return getRuleContext(ExpressionContext.class, 0);
    }

    public PragmaValueContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_pragmaValue;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SolidityVisitor)
        return ((SolidityVisitor<? extends T>) visitor).visitPragmaValue(this);
      else return visitor.visitChildren(this);
    }
  }

  public final PragmaValueContext pragmaValue() throws RecognitionException {
    PragmaValueContext _localctx = new PragmaValueContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_pragmaValue);
    try {
      setState(185);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1); {
          setState(183);
          version();
        }
          break;
        case 2:
          enterOuterAlt(_localctx, 2); {
          setState(184);
          expression(0);
        }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VersionContext extends ParserRuleContext {
    public List<VersionConstraintContext> versionConstraint() {
      return getRuleContexts(VersionConstraintContext.class);
    }

    public VersionConstraintContext versionConstraint(int i) {
      return getRuleContext(VersionConstraintContext.class, i);
    }

    public VersionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_version;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SolidityVisitor)
        return ((SolidityVisitor<? extends T>) visitor).visitVersion(this);
      else return visitor.visitChildren(this);
    }
  }

  public final VersionContext version() throws RecognitionException {
    VersionContext _localctx = new VersionContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_version);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(187);
        versionConstraint();
        setState(189);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)
          || _la == VersionLiteral) {
          {
            setState(188);
            versionConstraint();
          }
        }

      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VersionOperatorContext extends ParserRuleContext {
    public VersionOperatorContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_versionOperator;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SolidityVisitor)
        return ((SolidityVisitor<? extends T>) visitor).visitVersionOperator(this);
      else return visitor.visitChildren(this);
    }
  }
